--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root {
   --main-color: #ff206b;
 }
+
 ::selection {
   background-color: var(--main-color);
   color: #eee;
@@ -19,10 +20,130 @@
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
+
+/* body {
+  overflow: hidden;
+} */
+
+.spinner {
+  margin: 100px auto;
+  width: 100px;
+  height: 100px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.spinner > div {
+  background-color: var(--main-color);
+  height: 100%;
+  width: 8px;
+  display: inline-block;
+
+  -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+  animation: sk-stretchdelay 1.2s infinite ease-in-out;
+}
+
+.spinner .rect2 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+
+.spinner .rect3 {
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
+}
+
+.spinner .rect4 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+
+.spinner .rect5 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+
+@-webkit-keyframes sk-stretchdelay {
+  0%,
+  40%,
+  100% {
+    -webkit-transform: scaleY(0.4);
+  }
+  20% {
+    -webkit-transform: scaleY(1);
+  }
+}
+
+@keyframes sk-stretchdelay {
+  0%,
+  40%,
+  100% {
+    transform: scaleY(0.4);
+    -webkit-transform: scaleY(0.4);
+  }
+  20% {
+    transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+  }
+}
+
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: #000;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#sideBar {
+  position: fixed;
+  top: 30%;
+  left: 0;
+  z-index: 999;
+  display: flex;
+  white-space: nowrap;
+  align-items: flex-start;
+  i {
+    background-color: var(--main-color);
+    padding: 10px;
+    cursor: pointer;
+  }
+  .sideBox {
+    background-color: #ccc;
+    padding: 10px;
+    display: none;
+
+    .boxColor {
+      width: 30px;
+      height: 30px;
+      display: inline-block;
+      background-color: #09c;
+      cursor: pointer;
+    }
+
+    .boxbg {
+      width: 40px;
+      display: inline-block;
+      img{
+        height: 40px;
+      }
+    }
+  }
+}
+
 #btnUp {
   margin: 1rem;
   cursor: pointer;
   z-index: 9999;
+  display: none;
+}
+#btnUp :hover{
+  color: var(--main-color);
 }
 .main-color {
   color: var(--main-color);
